--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,37 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
+  background-color: white;
+} */
+.contenedor-encabezado{
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
+.encabezado{
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
+.Logo-encabezado{
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
 }
+.barra-de-navegacion{
 
-.card {
-  padding: 2em;
 }
+.contenedor-de-filtros{
 
-.read-the-docs {
-  color: #888;
+}
+.contenedor-principal{
+
+}
+.Contenedor-de-scrol-de-imagenes{
+
+}
+.contenedor-de-parte-baja{
+
+}
+.seccion-de-noticias{
+
+}
+.encabezado-noticias{
+  
 }
