GA-64 avance en el encabezado del front del menu principal

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,12 +57,12 @@
 .Contenedor-de-scrol-de-imagenes{
   display: flex;
   gap: 3vw;
-  align-items: center;
+  align-content: center;
   height: 100%;
-  padding: 10px;
-  padding-inline: 20px ;
+  padding: 20px;
+  /* padding-inline: 20px ; */
   background-color: gray;
-  
+
 }
 .contenedor-de-parte-baja{
 
