--- a/frontend/src/Hojas-de-estilo/ImagenDeScroll.css
+++ b/frontend/src/Hojas-de-estilo/ImagenDeScroll.css
@@ -20,7 +20,7 @@
   font-family: 'Inter',sans-serif;
   font-weight: bold;
   font-size: 2.3em;
-
+  text-shadow: -1px 0 violet, 0 1px violet, 1px 0 violet, 0 -1px violet;
 }
 .leyenda-scroll{
   text-align:justify;
