--- a/frontend/src/Hojas-de-estilo/Home.css
+++ b/frontend/src/Hojas-de-estilo/Home.css
@@ -58,11 +58,24 @@
     align-items: center;
     justify-content: center;
     gap: 3vw;
-    height: 90%;
+    height:auto;
+    width: 90vw;
     padding: 20px;
+    margin: 0px 2vw;
     /* padding-inline: 20px ; */
     background-color: rgb(174, 210, 255);
     overflow-y: auto;
+  }
+  .tabla{
+    background-color: rgb(174, 210, 255);
+    margin: 15px 2vw;
+    /* justify-self: right; */
+    
+  }
+  .tabla td {
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: #9400FF;
   }
   
   
