--- a/frontend/src/Hojas-de-estilo/BarraDeBusqueda.css
+++ b/frontend/src/Hojas-de-estilo/BarraDeBusqueda.css
@@ -1,3 +1,46 @@
-.buscador{
-    
+.buscador {
+  text-align: center;
+}
+
+.buscador form {
+  border-radius: 25px;
+  position: relative;
+}
+
+.busqueda-input {
+    /* Para cambiar el color del input
+    background-color: white;  */
+    height: 100%;
+    display: block;
+    border-radius: 25px;
+    font-size: 20px;
+    padding: 8px 40px 8px 20px;
+    border: none;
+    /* Para cambiar la sombra */
+    box-shadow: 0 5px 8px 3px black;
+}  
+ 
+.buscador form button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 100%;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-size: 18px;
+}
+
+button i{
+    color: rgb(93, 94, 95);
+}
+
+input:focus{
+    outline: none;
+}
+
+button:hover i{
+    color: rgb(162, 163, 163);
 }
