--- a/frontend/src/Hojas-de-estilo/BarraDeBusqueda.css
+++ b/frontend/src/Hojas-de-estilo/BarraDeBusqueda.css
@@ -8,16 +8,18 @@
 }
 
 .busqueda-input {
-    /* Para cambiar el color del input
-    background-color: white;  */
-    height: 100%;
     display: block;
+    height: 10px;
+    width: 250px;
+    font-size: 14px;
+    /* Para cambiar el color del input */
+    background-color: #808080;
     border-radius: 25px;
-    font-size: 20px;
     padding: 8px 40px 8px 20px;
     border: none;
+    color: black;
     /* Para cambiar la sombra */
-    box-shadow: 0 5px 8px 3px black;
+    box-shadow: 1px 2px 2px 1px black;
 }  
  
 .buscador form button{
@@ -39,6 +41,10 @@ button i{
 
 input:focus{
     outline: none;
+}
+
+input::placeholder {
+    color: black;
 }
 
 button:hover i{
