--- a/frontend/src/Hojas-de-estilo/Boton.css
+++ b/frontend/src/Hojas-de-estilo/Boton.css
@@ -1,6 +1,26 @@
 .boton-rediereccionamiento{
-
+    width: 80px;
+    height: 25px;
+    border-radius: 40px;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0 1em 0;
+    background-color: #808080;
+    color: black;
+    box-shadow: 1px 2px 2px 1px black;
 }
 .boton-filtro{
-    
+    width: 80px;
+    height: 15px;
+    border-radius: 40px;
+    font-size: 11px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0 1em 0;
+    background-color: #2a2a2a;
+    color: white;
+    box-shadow: 1px 1px 2px 1px black;
 }
