--- a/frontend/src/Hojas-de-estilo/Home.css
+++ b/frontend/src/Hojas-de-estilo/Home.css
@@ -5,35 +5,57 @@
   text-align: center;
   background-color: white;
 } */
-.contenedor-encabezado {
-  background-color: #27005d;
-  padding: 20px 0;
-  margin-bottom: 20px;
-  width: 100%;
-}
 .encabezado {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-around;
+  /* gap: 40px; */
+  background-color: #27005d;
+  padding: 40px 0px 0px 20px;
+  width: 100%;
+}
+
+.contendedor-logo{
+  position: relative;
+  padding: 0px 25px;
+  width: 150px;
+  height: 130px;
+  display: flex;
   align-items: center;
 }
-.Logo-encabezado {
-  /* filter: hue-rotate(270deg); */
-  width: 130px;
+
+.logo-encabezado {
+  position: absolute;
+  top: -15px;
+  right: 10px;
+  width: 100px;
   height: auto;
-  margin: 10px 7vw -5px 5vw;
   border-radius: 80%;
   box-shadow: 0 0 10px rgba(153, 0, 255, 0.9);
   border: 5px solid #9500ff;
 }
 
-.barra-de-navegacion {
+.navegacion {
+  padding: 0px 25px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
   width: 100%;
 }
 
+.encabezado-superior {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 40px;
+  align-items: center;
+  height: auto;
+}
+
 .contenedor-busqueda {
+  height: 100%;
   width: fit-content;
   display: flex;
   justify-content: center;
@@ -42,16 +64,23 @@
 
 .contenedor-botones {
   display: flex;
+  align-items: center;
   gap: 10px;
-  padding: 10px 5vw 10px 7vw;
+  /* padding: 10px 5vw 10px 7vw; */
 }
+
+.encabezado-inferior {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  align-items: center;
+}
+
 .contenedor-de-filtros {
   display: flex;
   justify-content: flex-start;
   gap: 10px;
-  padding: 10px 15%;
-  background-color: #9400ff;
-  margin-bottom: 20px;
+  /* background-color: #9400ff; */
 }
 
 .Contenedor-de-scrol-de-imagenes {
