--- a/frontend/src/Hojas-de-estilo/BarraDeBusqueda.css
+++ b/frontend/src/Hojas-de-estilo/BarraDeBusqueda.css
@@ -1,52 +1,54 @@
 .buscador {
+  width: 100%;
   text-align: center;
 }
 
 .buscador form {
+  width: 100%;
   border-radius: 25px;
   position: relative;
 }
 
 .busqueda-input {
-    display: block;
-    height: 10px;
-    width: 250px;
-    font-size: 14px;
-    /* Para cambiar el color del input */
-    background-color: #808080;
-    border-radius: 25px;
-    padding: 8px 40px 8px 20px;
-    border: none;
-    color: black;
-    /* Para cambiar la sombra */
-    box-shadow: 1px 2px 2px 1px black;
-}  
- 
-.buscador form button{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 50px;
-    height: 100%;
-    border-radius: 50%;
-    cursor: pointer;
-    border: none;
-    background: none;
-    font-size: 18px;
+  display: block;
+  height: 20px;
+  width: 90%;
+  font-size: 17px;
+  /* Para cambiar el color del input */
+  background-color: #808080;
+  border-radius: 25px;
+  padding: 8px 40px 8px 20px;
+  border: none;
+  color: black;
+  /* Para cambiar la sombra */
+  box-shadow: 1px 2px 2px 1px black;
 }
 
-button i{
-    color: rgb(93, 94, 95);
+.buscador form button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 100%;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+  background: none;
+  font-size: 18px;
 }
 
-input:focus{
-    outline: none;
+button i {
+  color: rgb(93, 94, 95);
+}
+
+input:focus {
+  outline: none;
 }
 
 input::placeholder {
-    color: black;
+  color: black;
 }
 
-button:hover i{
-    color: rgb(162, 163, 163);
+button:hover i {
+  color: rgb(162, 163, 163);
 }
