--- a/frontend/src/Hojas-de-estilo/Boton.css
+++ b/frontend/src/Hojas-de-estilo/Boton.css
@@ -1,21 +1,22 @@
 .boton-rediereccionamiento{
-    width: 80px;
-    height: 25px;
+    width: 100px;
+    height: 35px;
     border-radius: 40px;
-    font-size: 14px;
+    font-size: 17px;
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 0 1em 0;
+    padding: 0 20px 0 20px;
+    text-align: center;
     background-color: #808080;
     color: black;
     box-shadow: 1px 2px 2px 1px black;
 }
 .boton-filtro{
-    width: 80px;
-    height: 15px;
+    width: 100px;
+    height: 25px;
     border-radius: 40px;
-    font-size: 11px;
+    font-size: 15px;
     border: none;
     outline: none;
     cursor: pointer;
