--- a/frontend/src/Hojas-de-estilo/Home.css
+++ b/frontend/src/Hojas-de-estilo/Home.css
@@ -8,7 +8,6 @@
 .encabezado {
   display: flex;
   justify-content: space-around;
-  /* gap: 40px; */
   background-color: #27005d;
   padding: 40px 0px 0px 20px;
   width: 100%;
@@ -18,7 +17,7 @@
   position: relative;
   padding: 0px 25px;
   width: 150px;
-  height: 130px;
+  height: 150px;
   display: flex;
   align-items: center;
 }
@@ -27,7 +26,7 @@
   position: absolute;
   top: -15px;
   right: 10px;
-  width: 100px;
+  width: 120px;
   height: auto;
   border-radius: 80%;
   box-shadow: 0 0 10px rgba(153, 0, 255, 0.9);
@@ -35,7 +34,7 @@
 }
 
 .navegacion {
-  padding: 0px 25px;
+  padding: 0px 5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -48,15 +47,14 @@
   height: 70%;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  gap: 40px;
+  justify-content: space-between;
   align-items: center;
   height: auto;
 }
 
 .contenedor-busqueda {
   height: 100%;
-  width: fit-content;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,7 +63,8 @@
 .contenedor-botones {
   display: flex;
   align-items: center;
-  gap: 10px;
+  width: 30%;
+  gap: 20px;
   /* padding: 10px 5vw 10px 7vw; */
 }
 
