--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,8 +2,8 @@
   /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  background-color: white; */
+  text-align: center;*/
+  background-color: rgb(200, 228, 255); 
   font-size: 16px;
   box-sizing: border-box;
 }
