--- a/frontend/src/Hojas-de-estilo/Home.css
+++ b/frontend/src/Hojas-de-estilo/Home.css
@@ -10,7 +10,7 @@
   justify-content: space-around;
   background-color: #27005d;
   padding: 40px 0px 0px 20px;
-  width: 100%;
+  width: 98.5%;
 }
 
 .contendedor-logo{
@@ -88,22 +88,23 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  border-radius: 10px;
   gap: 3vw;
   height: auto;
   width: 90vw;
-  padding: 20px;
-  margin: 0px 2vw;
-  /* padding-inline: 20px ; */
+  padding: 50px ;
+  margin: 10px 2vw;
   background-color: rgb(174, 210, 255);
   overflow-y: auto;
 }
-.tabla {
-  background-color: rgb(174, 210, 255);
-  margin: 15px 2vw;
-  /* justify-self: right; */
+
+/* Para Chrome, Safari y Opera */
+::-webkit-scrollbar {
+  width: 0px;  /* Remover scrollbar vertical */
+  height: 0px; /* Remover scrollbar horizontal */
 }
-.tabla td {
-  border: 2px solid black;
-  border-radius: 10px;
-  background-color: #9400ff;
+
+/* Para Internet Explorer y Edge */
+element {
+-ms-overflow-style: none;
 }
