--- a/frontend/src/Hojas-de-estilo/Cards.css
+++ b/frontend/src/Hojas-de-estilo/Cards.css
@@ -1,56 +1,52 @@
 .cards {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    flex-wrap: wrap;
-    list-style: none;
-    padding: 25px 0;
-  }
-  
-  .card {
-    height: fit-content;
-    border-radius: .7em;
-    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-  }
-  
-  .card_image {
-    width: 100%;
-    height: 200px;
-    overflow: hidden;
-  }
-  
-  .card_image > img {
-    max-height: auto;
-    max-width: 100%;
-    vertical-align: middle;
-  }
-  
-  .card_btn {
-    color: #ffffff;
-    padding: 0.8rem;
-    font-size: 14px;
-    text-transform: uppercase;
-    border-radius: 4px;
-    font-weight: 400;
-    display: block;
-    width: 100%;
-    cursor: pointer;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    background: transparent;
-  }
-  
-  .card_btn:hover {
-    background-color: rgba(255, 255, 255, 0.12);
-  }
-  
-  
-  
-  
-  
-  /* @media (min-width: 40rem) {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 25px 0;
+}
+
+.card {
+  height: fit-content;
+  border-radius: 0.7em;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.card_image {
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+
+.card_image > img {
+  max-height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+.card_btn {
+  color: #ffffff;
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  font-weight: 400;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: transparent;
+}
+
+.card_btn:hover {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+
+/* @media (min-width: 40rem) {
     .cards_item {
       width: 50%;
     }
@@ -61,27 +57,30 @@
       width: 33.3333%;
     }
   } */
-  
-  
-  .card_title {
-    color: #ffffff;
-    font-size: 1.1rem;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: capitalize;
-    margin: 0px;
-  }
-  
-  .card_content {
-    padding: 1rem;
-    background: linear-gradient(to bottom left, rgba(77,1,107,1) 0%, rgba(183,0,255,1) 100%);
-    /* background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%); */
-  }
-  
-  .card_text {
-    color: #ffffff;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    margin-bottom: 1.25rem;    
-    font-weight: 400;
-  }
+
+.card_title {
+  color: #ffffff;
+  font-size: 1.1rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin: 0px;
+}
+
+.card_content {
+  padding: 1rem;
+  background: linear-gradient(
+    to bottom left,
+    rgba(77, 1, 107, 1) 0%,
+    rgba(183, 0, 255, 1) 100%
+  );
+  /* background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%); */
+}
+
+.card_text {
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  font-weight: 400;
+}
