--- a/frontend/src/Hojas-de-estilo/ImagenDeScroll.css
+++ b/frontend/src/Hojas-de-estilo/ImagenDeScroll.css
@@ -1,4 +1,4 @@
-.contenedor-principal-imagenes1{
+.contenedor-principal-imagenes1 {
   display: flex;
   background-color: #ba7de6;
   width: 25vw;
@@ -9,22 +9,22 @@
   /* border: 2px solid #27005D; */
   border-radius: 15px;
   padding: 15px 10px;
-  box-shadow: 0 0 30px rgba(148, 0, 255,0.5);
+  box-shadow: 0 0 30px rgba(148, 0, 255, 0.5);
 }
-.imagen-del-scroll{
+.imagen-del-scroll {
   width: 20vw;
   height: auto;
 }
-.nombre-objeto-scroll{
+.nombre-objeto-scroll {
   text-align: center;
-  font-family: 'Inter',sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: bold;
   font-size: 2.3em;
   text-shadow: -1px 0 violet, 0 1px violet, 1px 0 violet, 0 -1px violet;
 }
-.leyenda-scroll{
-  text-align:justify;
-  font-family: 'Inter',sans-serif;
+.leyenda-scroll {
+  text-align: justify;
+  font-family: "Inter", sans-serif;
   font-weight: Thin;
   font-size: 1em;
 }
