--- a/frontend/src/components/Cards/Cards.module.css
+++ b/frontend/src/components/Cards/Cards.module.css
@@ -16,19 +16,19 @@
   overflow: hidden;
 }
 
-.card_image {
+.card-image {
   width: 100%;
   height: 200px;
   overflow: hidden;
 }
 
-.card_image > img {
+.card-image > img {
   max-height: auto;
   max-width: 100%;
   vertical-align: middle;
 }
 
-.card_btn {
+.card-btn {
   color: #ffffff;
   padding: 0.8rem;
   font-size: 14px;
@@ -42,23 +42,11 @@
   background: transparent;
 }
 
-.card_btn:hover {
+.card-btn:hover {
   background-color: rgba(255, 255, 255, 0.12);
 }
 
-/* @media (min-width: 40rem) {
-    .cards_item {
-      width: 50%;
-    }
-  }
-  
-  @media (min-width: 56rem) {
-    .cards_item {
-      width: 33.3333%;
-    }
-  } */
-
-.card_title {
+.card-title {
   color: #ffffff;
   font-size: 1.1rem;
   font-weight: 700;
@@ -67,7 +55,7 @@
   margin: 0px;
 }
 
-.card_content {
+.card-content {
   padding: 1rem;
   background: linear-gradient(
     to bottom left,
@@ -77,7 +65,7 @@
   /* background: linear-gradient(to bottom left, #EF8D9C 40%, #FFC39E 100%); */
 }
 
-.card_text {
+.card-text {
   color: #ffffff;
   font-size: 0.875rem;
   line-height: 1.5;
