--- a/frontend/src/components/PopupConfirmarEliminación/PopupConfirmarEliminacion.module.css
+++ b/frontend/src/components/PopupConfirmarEliminación/PopupConfirmarEliminacion.module.css
@@ -1,11 +1,10 @@
-.Popup{
+.popup{
     position: fixed;
     top: 5px;
     right: 5px;
     bottom: 5px;
     left: 5px;
     background-color: rgba(0, 0, 0, 0.8);
-    opacity: 0.9;
     backdrop-filter: blur(15px);
     display: flex;
     justify-content: center;
@@ -16,33 +15,33 @@
     border-radius: 0.25rem;
     z-index: 1;
 }
-.Ventana{
+.ventana{
     position: top;
     width: 450px;
     height: 200px;
-    background-color: #9400FF;
-    justify content : center;
+    background-color: #9400ff;
+    justify-content: center;
     border-radius: 15px;
     display: flex;
     align-items: center;
 
 }
-.Form-ventana{
+.formventana{
     position: center;
     width: 100%;
     display: flex;
     align-items: center;
     margin: 10%;
     flex-direction: column;
+    color: #fff;
 }
 p{
     position: relative;
-    text-align : justify;
-    padding-top : 5%;
-    padding-bottom: 5%;
+    text-align: left;
+    padding-bottom: 10%;
     font-size: 1.2rem;
 }
-.Botones{
+.botones{
     position: center;
     width: 100%;
     display: flex;
@@ -51,28 +50,30 @@ p{
     flex-direction: row;
 }
 
-.Confirmar{
+.confirmar{
     position: center;
-    width: 70%;
+    width: 80%;
     height: 40px;
     border-radius: 40px;
-    background: #27005D;
+    background: #27005d;
     border: none;
     outline: none;
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
+    color: #fff;
     
 }
-.Cancelar{
+.cancelar{
     position: center;
-    width: 70%;
+    width: 80%;
     height: 40px;
     border-radius: 40px;
-    background: #27005D;
+    background: #27005d;
     border: none;
     outline: none;
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
+    color: #fff;
 }
