--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -61,6 +61,31 @@
   /* padding: 10px 5vw 10px 7vw; */
 }
 
+.contenedor-botones2 {
+  padding-left: 18px;
+  display: flex;
+  align-items: center;
+  width: 30%;
+  gap: 20px;
+  /* padding: 10px 5vw 10px 7vw; */
+}
+.eliminar{
+  width: 100px;
+  height: 35px;
+  border-radius: 40px;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0 20px 0 20px;
+  text-align: center;
+  background-color: #808080;
+  color: black;
+  box-shadow: 1px 2px 2px 1px black;
+  border-radius: 10px;
+  
+}
+
 .encabezado-inferior {
   width: 100%;
   height: 30%;
