Arreglado scrollbar en firefox

--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -107,6 +107,7 @@
   background-color: rgb(174, 210, 255);
   overflow-y: auto;
   overflow-x: auto;
+  scrollbar-width: none
 }
 
 /* Para Chrome, Safari y Opera */
