--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -96,39 +96,27 @@
   display: flex;
   /* flex-wrap: wrap; */
   flex-direction: row;
-  align-items: left;
+  align-items: center;
   justify-content: center;
-  border-radius: 15px;
+  border-radius: 10px;
   gap: 3vw;
   height: auto;
-  width: 95vw;
+  width: 90vw;
   padding: 50px;
-  margin: 11px 2vw;
+  margin: 10px 2vw;
   background-color: rgb(174, 210, 255);
   overflow-y: auto;
-  overflow-x: auto;
-  scrollbar-width: none
 }
 
 /* Para Chrome, Safari y Opera */
 ::-webkit-scrollbar {
-  width: 0px;  /* Remover scrollbar vertical */
+  width: 0px; /* Remover scrollbar vertical */
   height: 0px; /* Remover scrollbar horizontal */
 }
 
 /* Para Internet Explorer y Edge */
 element {
   -ms-overflow-style: none;
-}
-
-/* Para Mozilla Firefox */
-::-moz-scrollbar {
-  width: 0px;
-  height: 0px;
-}
-
-body {
-  scrollbar-width: none;
 }
 
 .contenedor-de-parte-baja {
