--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,67 +1,53 @@
 .header {
-  display: flex;
-  justify-content: space-around;
-  background-color: #27005d;
-  padding: 40px 0px 10px 0px;
-  width: 100%;
-}
-
-.logo-container {
-  position: relative;
-  padding: 0px 25px;
-  width: 150px;
-  height: 150px;
-  display: flex;
-  align-items: center;
-}
-
-.logo-container img {
-  position: absolute;
-  top: -15px;
-  right: 10px;
-  width: 120px;
-  height: auto;
-  border-radius: 80%;
-  box-shadow: 0 0 10px rgba(153, 0, 255, 0.9);
-  border: 5px solid #9500ff;
-}
-
-.nav {
-  padding: 0px 5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   gap: 10px;
   width: 100%;
+  background-color: #fff;
+  padding: 20px;
+  width: 100%;
+}
+
+.inputContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  padding: 0 20px 0 20px;
+  background-color: #f6f7f6;
+  border: 1px solid #dddde9;
+  color: #353535;
+  max-width: 500px;
+}
+
+.input {
+  width: 100%;
+  height: 40px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  font-size: 17px;
+}
+
+.input::placeholder {
+  color: #d2d2e3;
 }
 
 .encabezado-superior {
-  width: 100%;
-  height: 70%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: auto;
-}
-
-.contenedor-busqueda {
-  height: 110%;
-  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: auto;
+  position: relative;
 }
 
-.contenedor-botones {
-  display: flex;
-  align-items: center;
-  width: 30%;
-  gap: 20px;
-  /* padding: 10px 5vw 10px 7vw; */
+.accountContainer {
+  align-self: flex-end;
 }
 
-.eliminar{
+.eliminar {
   width: 100px;
   height: 35px;
   border-radius: 40px;
@@ -75,48 +61,23 @@
   color: black;
   box-shadow: 1px 2px 2px 1px black;
   border-radius: 10px;
-  
-}
-
-.encabezado-inferior {
-  width: 100%;
-  height: 30%;
-  display: flex;
-  align-items: center;
 }
 
 .contenedor-de-filtros {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 10px;
-  /* background-color: #9400ff; */
+  margin-top: 16px;
 }
 
 .items-container {
   display: flex;
-  /* flex-wrap: wrap; */
-  flex-direction: row;
   align-items: center;
-  justify-content: center;
   border-radius: 10px;
-  gap: 3vw;
+  gap: 10px;
   height: auto;
-  width: 90vw;
-  padding: 50px;
-  margin: 10px 2vw;
   background-color: rgb(174, 210, 255);
   overflow-y: auto;
-}
-
-/* Para Chrome, Safari y Opera */
-::-webkit-scrollbar {
-  width: 0px; /* Remover scrollbar vertical */
-  height: 0px; /* Remover scrollbar horizontal */
-}
-
-/* Para Internet Explorer y Edge */
-element {
-  -ms-overflow-style: none;
 }
 
 .contenedor-de-parte-baja {
