--- a/frontend/src/components/ItemCard/ItemCard.module.css
+++ b/frontend/src/components/ItemCard/ItemCard.module.css
@@ -1,15 +1,15 @@
+
 .container {
   display: flex;
   background-color: #ba7de6;
   width: 25vw;
-  height: auto;
+  height:35vw;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   /* border: 2px solid #27005D; */
   border-radius: 15px;
   padding: 15px 10px;
-  box-shadow: 0 0 30px rgba(148, 0, 255, 0.5);
   color: #e4f1ff;
   
 }
