--- a/frontend/src/components/Boton/Boton.module.css
+++ b/frontend/src/components/Boton/Boton.module.css
@@ -12,6 +12,8 @@
   color: black;
   box-shadow: 1px 2px 2px 1px black;
   border-radius: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 .boton-filtro {
   width: 100px;
