--- a/frontend/src/components/ItemCard/ItemCard.module.css
+++ b/frontend/src/components/ItemCard/ItemCard.module.css
@@ -3,7 +3,7 @@
   display: flex;
   background-color: #ba7de6;
   width: 25vw;
-  height:35vw;
+  height:40vw;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -29,16 +29,30 @@
   font-family: "Inter", sans-serif;
   font-weight: Thin;
   font-size: 1em;
+
+  padding-top: 5px;
+  margin-top: 5px;
+  border-radius: 5px;
+  border-Top: 2px solid white;
+  
+  
 }
 .status {
+
   font-family: "Inter", sans-serif;
   margin-top: -46px;
   font-size: 1.1em;
   background-color: transparent;
-  text-align: left;
-  width: max-content;
+  width: auto;
   height: 1px;
 
+  padding-top: 5px;
+  margin-top: 5px;
+  text-align: center;
+  justify-items: center;
+  border-radius: 5px;
+  border-Top: 2px solid white;
+  
 }
 .status.free {
 
