--- a/frontend/src/pages/AdminHome/Admin.module.css
+++ b/frontend/src/pages/AdminHome/Admin.module.css
@@ -81,6 +81,7 @@
   }
   
   .contenedor-de-parte-baja {
+    flex-direction: column;
     width: 100%;
     display: flex;
     gap: 5%;
@@ -95,8 +96,7 @@
       rgba(183, 0, 255, 1) 100%
     );
     height: auto;
-    width: 50%;
-    margin-left: 10%;
+    width: 65%;
     box-shadow: 0 0.4rem 0.8rem #0005;
     border-radius: 0.8rem;
     overflow: hidden;
@@ -105,16 +105,7 @@
     align-items: center;
   }
   
-  .news {
-    width: 30%;
-    height: 100%;
-    color: #272727;
-    font-style: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    margin: 0 auto;
-  }
-  
+
   body {
     background-color: #c8e4ff;
   }
