--- a/frontend/src/pages/Login/Login.module.css
+++ b/frontend/src/pages/Login/Login.module.css
@@ -1,3 +1,12 @@
+
+.header {
+  gap: 10px;
+  width: 100%;
+  background-color: #fff;
+  padding: 20px;
+  width: 100%;
+}
+
 .container {
   display: flex;
   justify-content: center;
